# qaithon

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.es.md  README.md  pyproject.toml
docs/cookbook/: 01_quickstart.md  02_huggingface_models.md  03_choose_objective.md  04_inspect_decisions.md  05_fine_tuning.md  06_compose_pipelines.md  README.md
docs/en/: API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  COOKBOOK.md  FINDINGS.md  GLOSSARY.md  HARDWARE.md  QUICKSTART.md  README.md
docs/es/: API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  COOKBOOK.md  FINDINGS.md  GLOSSARY.md  HARDWARE.md  QUICKSTART.md  README.md
qaithon/: __init__.py  _logging.py  asyncio_backend.py  benchmarks.py  cache.py  cli.py  compile.py  compile_report.py  config.py  exceptions.py  fallback.py  glossary.py  hardware_limits.py  hf_integration.py  kernels.py  metrics.py  observability.py  pipeline.py  plugins.py  pricing.py  qubits.py  streaming.py  tracing.py  training.py
qaithon/backends/: __init__.py  _realhw_common.py  aws_braket_qpus.py  aws_braket_sv1.py  base.py  deepquantum_backend.py  ibm_aer.py  ibm_heron.py  mock.py  pennylane_backend.py  perceval_photonic.py  quandela_belenos.py  quandela_merlin.py  quandela_sim.py
qaithon/handlers/: __init__.py  architecture.py  attention.py  mixtral.py
qaithon/hub/: __init__.py  loader.py
qaithon/integrations/: __init__.py  vllm.py
qaithon/ir/: __init__.py  adaptive_selector.py  analyzer.py  selector.py
qaithon/lab/: __init__.py  datasets.py  inference.py  training.py
qaithon/layers/: __init__.py  photonic_layer.py  quantum_attention.py  quantum_layer.py  quantum_linear.py  reuploading_classifier.py
qaithon/models/: __init__.py  toy_transformer.py
qaithon/utils/: __init__.py
scripts/: run_all_experiments.py  run_hardware_experiments.py  run_photonic_hardware.py  run_vqc_hardware.py
tests/: conftest.py  test_adaptive_selector.py  test_backends_deepquantum.py  test_backends_ibm_aer.py  test_backends_mock.py  test_backends_pennylane.py  test_backends_quandela.py  test_cache.py  test_cli.py  test_compile_basic.py  test_config_setters.py  test_devices.py  test_disk_cache.py  test_fallback.py  test_handlers_architecture.py  test_handlers_attention.py  test_handlers_mixtral.py  test_handlers_mixtral_transform.py  test_hf_integration.py  test_hub_real.py  test_hub_skeleton.py  test_integrations_vllm.py  test_models_toy.py  test_new_architectures.py  test_observability.py  test_pipeline.py  test_plugins.py  test_quantum_attention.py  test_quantum_linear.py  test_realhw_backends.py  test_serialization.py  test_streaming.py  test_tracing.py  test_walker.py
